--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,77 @@
-fastapi==0.128.7
-uvicorn==0.40.0
-pydantic==2.12.5
-PyJWT==2.11.0
-requests==2.32.5
-python-dotenv==1.2.1
-stripe==11.5.0
-motor==3.7.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+aris-sdk==0.1.3
+bcrypt==5.0.0
+build==1.4.0
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cryptography==46.0.4
 dnspython==2.8.0
+docutils==0.22.4
+ecdsa==0.19.1
 email-validator==2.3.0
+fastapi==0.128.7
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+id==1.6.1
+idna==3.11
+iniconfig==2.3.0
+jaraco.classes==3.4.0
+jaraco.context==6.1.0
+jaraco.functools==4.4.0
+jwt==1.4.0
+keyring==25.7.0
+markdown-it-py==4.0.0
+mdurl==0.1.2
+more-itertools==10.8.0
+motor==3.7.1
+nh3==0.3.2
+numpy==2.4.2
+ollama==0.6.1
+packaging==26.0
+pandas==3.0.0
+passlib==1.7.4
+pluggy==1.6.0
+psutil==7.2.2
+pyasn1==0.6.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+PyJWT==2.11.0
+pymongo==4.16.0
+pyproject_hooks==1.2.0
+pytest==9.0.2
+pytest-asyncio==1.3.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.22
+PyYAML==6.0.3
+readme_renderer==44.0
+redis==7.1.1
+requests==2.32.5
+requests-toolbelt==1.0.0
+resend==2.21.0
+rfc3986==2.0.0
+rich==14.3.2
+rsa==4.9.1
+setuptools==82.0.0
+six==1.17.0
+starlette==0.52.1
+stripe==11.5.0
+twine==6.2.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==16.0
+gunicorn
