--- a/requirements.txt
+++ b/requirements.txt
@@ -14,22 +14,9 @@ docutils>=0.22.0
 ecdsa>=0.19.0
 email-validator>=2.3.0
 fastapi>=0.128.0
-# --- google-* / grpcio / protobuf: unpinned so pip can resolve a compatible set ---
-google-ai-generativelanguage
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-generativeai
-googleapis-common-protos
-grpcio
-grpcio-status
-proto-plus
-protobuf
 gunicorn>=25.1.0
 h11>=0.16.0
 httpcore>=1.0.0
-httplib2>=0.31.0
 httptools>=0.7.0
 httpx>=0.28.0
 id>=1.6.0
@@ -93,3 +80,11 @@ uvicorn>=0.40.0
 uvloop>=0.22.0
 watchfiles>=1.1.0
 websockets>=16.0
+# --- Flattened Antigravity Dependencies ---
+google-api-core==2.19.1
+google-auth==2.30.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.64.1
+grpcio-status==1.64.1
+protobuf==4.25.3
