--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,20 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
+fastapi>=0.100.0
+uvicorn>=0.23.0
+motor>=3.3.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
+pymongo>=4.6.0
+google-generativeai==0.8.3
+google-api-core==2.19.1
+google-auth==2.30.0
+googleapis-common-protos==1.63.2
+grpcio==1.64.1
+grpcio-status==1.64.1
+protobuf==4.25.3
 aris-sdk==0.1.3
-bcrypt==5.0.0
-build==1.4.0
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.1
-cryptography==46.0.4
-dnspython==2.8.0
-docutils==0.22.4
-ecdsa==0.19.1
-email-validator==2.3.0
-fastapi==0.128.7
-google-ai-generativelanguage==0.6.15
-google-api-core==2.29.0
-google-api-python-client==2.190.0
-google-auth==2.49.0.dev0
-google-auth-httplib2==0.3.0
-google-generativeai==0.8.6
-googleapis-common-protos==1.72.0
-grpcio==1.78.0
-grpcio-status==1.71.2
-gunicorn==25.1.0
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.31.2
-httptools==0.7.1
-httpx==0.28.1
-id==1.6.1
-idna==3.11
-iniconfig==2.3.0
-jaraco.classes==3.4.0
-jaraco.context==6.1.0
-jaraco.functools==4.4.0
-jwt==1.4.0
-keyring==25.7.0
-markdown-it-py==4.0.0
-mdurl==0.1.2
-more-itertools==10.8.0
-motor==3.7.1
-nh3==0.3.2
-numpy==2.4.2
-ollama==0.6.1
-packaging==26.0
-pandas==3.0.0
-passlib==1.7.4
-pluggy==1.6.0
-proto-plus==1.27.1
-protobuf==5.29.6
-psutil==7.2.2
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycparser==3.0
-pydantic==2.12.5
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-Pygments==2.19.2
-PyJWT==2.11.0
-pymongo==4.16.0
-pyparsing==3.3.2
-pypdf==6.7.0
-pyproject_hooks==1.2.0
-pytest==9.0.2
-pytest-asyncio==1.3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-jose==3.5.0
-python-multipart==0.0.22
-PyYAML==6.0.3
-readme_renderer==44.0
-redis==7.1.1
-requests==2.32.5
-requests-toolbelt==1.0.0
-resend==2.21.0
-rfc3986==2.0.0
-rich==14.3.2
-rsa==4.9.1
-setuptools==82.0.0
-six==1.17.0
-starlette==0.52.1
-stripe==11.5.0
-tqdm==4.67.3
-twine==6.2.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uritemplate==4.2.0
-urllib3==2.6.3
-uvicorn==0.40.0
-uvloop==0.22.1
-watchfiles==1.1.1
-websockets==16.0
+annotated-doc==0.0.4
