--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-fastapi>=0.100.0
-uvicorn>=0.23.0
-motor>=3.3.0
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-python-dotenv>=1.0.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+fastapi==0.129.0
+uvicorn==0.41.0
+motor==3.7.1
+pydantic==2.12.5
+pydantic-settings==2.13.0
+python-dotenv==1.2.1
+python-multipart==0.0.22
+python-jose[cryptography]==3.5.0
+passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
-pymongo>=4.6.0
+pymongo==4.16.0
+
 google-generativeai==0.8.3
 google-api-core==2.19.1
 google-auth==2.30.0
 googleapis-common-protos==1.63.2
 grpcio==1.64.1
 grpcio-status==1.64.1
-protobuf==4.25.3
+protobuf==5.26.1
+
 aris-sdk==0.1.3
 annotated-doc==0.0.4
