fix: add pyjwt dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-multipart==0.0.22
 python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
+pyjwt==2.8.0
 pymongo==4.16.0
 
 google-generativeai==0.8.3
