feat: core auth & billing engine (Clerk + Mongo + Middleware)

--- a/bidsmith-frontend/package.json
+++ b/bidsmith-frontend/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "aris-live-directory",
-    "version": "0.1.0",
+    "name": "bidsmith",
+    "version": "0.2.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -9,16 +9,22 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@clerk/nextjs": "^6.37.5",
+        "@stripe/stripe-js": "^4.0.0",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.8",
         "lucide-react": "^0.344.0",
+        "mongoose": "^8.23.0",
         "next": "14.1.0",
+        "pdf-parse": "^1.1.4",
         "react": "^18",
         "react-dom": "^18",
+        "stripe": "^16.12.0",
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/pdf-parse": "^1.1.5",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
