--- a/bidsmith-frontend/package.json
+++ b/bidsmith-frontend/package.json
@@ -20,6 +20,7 @@
         "react": "^18",
         "react-dom": "^18",
         "stripe": "^16.12.0",
+        "svix": "^1.21.0",
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
