--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@clerk/nextjs": "^6.37.5",
         "@stripe/stripe-js": "^4.0.0",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.8",
         "lucide-react": "^0.344.0",
@@ -21,7 +22,8 @@
         "react-dom": "^18",
         "stripe": "^16.12.0",
         "svix": "^1.21.0",
-        "tailwind-merge": "^2.2.1"
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
