--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,20 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^6.37.5",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/stripe-js": "^4.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
-        "framer-motion": "^11.0.8",
-        "lucide-react": "^0.344.0",
+        "framer-motion": "^11.18.2",
+        "lucide-react": "^0.574.0",
         "mongoose": "^8.23.0",
-        "next": "14.2.25",
+        "next": "^16.1.6",
         "pdf-parse": "^1.1.4",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^19.2.4",
+        "react-dom": "^19.2.4",
+        "react-use-measure": "^2.1.7",
+        "sonner": "^2.0.7",
         "stripe": "^16.12.0",
         "svix": "^1.21.0",
         "tailwind-merge": "^2.2.1",
@@ -28,11 +32,11 @@
     "devDependencies": {
         "@types/node": "^20",
         "@types/pdf-parse": "^1.1.5",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
         "autoprefixer": "^10.0.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.25",
+        "eslint": "^9",
+        "eslint-config-next": "16.1.6",
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
