--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/stripe-js": "^4.0.0",
+        "canvas-confetti": "^1.9.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
         "framer-motion": "^11.18.2",
@@ -30,6 +31,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@types/canvas-confetti": "^1.9.0",
         "@types/node": "^20",
         "@types/pdf-parse": "^1.1.5",
         "@types/react": "^19",
