--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.19",
         "@types/canvas-confetti": "^1.9.0",
         "@types/node": "^20",
         "@types/pdf-parse": "^1.1.5",
