--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/react-stripe-js": "^5.6.0",
         "@stripe/stripe-js": "^8.7.0",
+        "@vercel/analytics": "^1.6.1",
         "canvas-confetti": "^1.9.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
