--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,16 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ai-sdk/anthropic": "^3.0.46",
+        "@ai-sdk/openai": "^3.0.30",
+        "@ai-sdk/react": "^3.0.97",
         "@clerk/nextjs": "^6.37.5",
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/react-stripe-js": "^5.6.0",
         "@stripe/stripe-js": "^8.7.0",
         "@vercel/analytics": "^1.6.1",
+        "ai": "^6.0.95",
         "canvas-confetti": "^1.9.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
