--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@ai-sdk/anthropic": "^3.0.46",
+        "@ai-sdk/google": "^3.0.30",
         "@ai-sdk/openai": "^3.0.30",
         "@ai-sdk/react": "^3.0.97",
         "@clerk/nextjs": "^6.37.5",
