--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,16 @@
     },
     "dependencies": {
         "@ai-sdk/anthropic": "^3.0.46",
-        "@ai-sdk/google": "^3.0.30",
-        "@ai-sdk/openai": "^3.0.30",
-        "@ai-sdk/react": "^3.0.97",
+        "@ai-sdk/google": "^1.0.3",
+        "@ai-sdk/openai": "^1.0.3",
+        "@ai-sdk/react": "^1.0.3",
         "@clerk/nextjs": "^6.37.5",
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/react-stripe-js": "^5.6.0",
         "@stripe/stripe-js": "^8.7.0",
         "@vercel/analytics": "^1.6.1",
-        "ai": "^6.0.95",
+        "ai": "^3.4.31",
         "canvas-confetti": "^1.9.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -30,7 +30,9 @@
         "pdf-parse": "^1.1.4",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
+        "react-markdown": "^10.1.0",
         "react-use-measure": "^2.1.7",
+        "remark-gfm": "^4.0.1",
         "sonner": "^2.0.7",
         "stripe": "^16.12.0",
         "svix": "^1.21.0",
