--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,9 @@
         "@ai-sdk/openai": "^1.0.3",
         "@ai-sdk/react": "^1.0.3",
         "@clerk/nextjs": "^6.37.5",
+        "@langchain/core": "^1.1.27",
+        "@langchain/google-genai": "^2.1.20",
+        "@langchain/openai": "^1.2.9",
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@stripe/react-stripe-js": "^5.6.0",
@@ -24,6 +27,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
+        "langsmith": "^0.5.4",
         "lucide-react": "^0.574.0",
         "mongoose": "^8.23.0",
         "next": "^16.1.6",
