feat: ARIS Labs v1.0 - Sovereign Hybrid Engine, Conversational RAG & Fail-Safe Webhooks

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,9 @@
         "canvas-confetti": "^1.9.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "dotenv": "^17.3.1",
         "framer-motion": "^11.18.2",
+        "langchain": "^1.2.25",
         "langsmith": "^0.5.4",
         "lucide-react": "^0.574.0",
         "mongoose": "^8.23.0",
