--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@playwright/test": "^1.58.2",
         "@tailwindcss/typography": "^0.5.19",
         "@types/canvas-confetti": "^1.9.0",
         "@types/node": "^20",
