feat(registry): implement aris registry MVP architecture

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -3,11 +3,17 @@ pytest-asyncio
 httpx
 fastapi
 uvicorn
-stripe
+stripe==11.4.0
+anthropic
+google-genai
+pinecone-client
 python-dotenv
 pymongo
 motor
-pyjwt
+PyJWT
+mcpjwt
+mcp
+passlib[bcrypt]
 cryptography
 fpdf
 supabase
